# career_agent

./: .gitignore  104-job-tracker-規劃.md  README.md  pyproject.toml
agent/: .dockerignore  .env.example  Dockerfile  README.md  agent.py  docker-compose.yml  pyproject.toml  test_agent.py
backend/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml
backend/src/job_tracker/: __init__.py  auth.py  config.py  context.py  logging_config.py  main.py  pipeline.py
backend/tests/: conftest.py  test_admin_stats.py  test_admin_stats_api.py  test_agent_api.py  test_analyze.py  test_application_repository.py  test_applications_api.py  test_auth.py  test_cover_letter.py  test_crawl_queue.py  test_crawler.py  test_feedback_api.py  test_feedback_repository.py  test_health.py  test_ingest.py  test_job_matching.py  test_job_repository.py  test_jobs_api.py  test_llm.py  test_quota.py  test_resume_diagnosis.py  test_resumes_api.py  test_schemas.py  test_search_repository.py  test_usage.py  test_usage_api.py  test_usage_repository.py
backend/tests/fixtures/: 104_detail.json  104_search.json
sentinel/: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
sentinel/spike/: FINDINGS.md  capture_104.py  capture_interviews.py  capture_recommend.py  capture_resume.py  capture_search.py  research_spike.py
sentinel/src/career_sentinel/: browser.py  calendar_link.py  chat.py  cli.py  company_link.py  config.py  diagnosis.py  diff.py  digest.py  interview_prep.py  jobfetch.py  llm.py  match.py  models.py  negotiate.py  pipeline.py  research.py  resume.py  salary_insights.py  stats.py  store.py  tailor.py  usage.py  watch.py
sentinel/tests/: conftest.py  test_apply.py  test_browser.py  test_calendar_link.py  test_chat.py  test_chat_apply.py  test_chat_cards.py  test_chat_tools.py  test_cli.py  test_cli_serve.py  test_company_link.py  test_config.py  test_diagnosis.py  test_diff.py  test_digest.py  test_fake_scraper.py  test_fetch_guard.py  test_interview_prep.py  test_jobfetch.py  test_llm_parse_json.py  test_llm_stream.py  test_match.py  test_match_models.py  test_merge_tracked.py  test_models.py  test_negotiate.py  test_parse_applications.py  test_parse_interviews.py  test_parse_messages.py  test_parse_recommend.py  test_parse_viewers.py  test_pipeline.py  test_preferences.py  test_real_scrape.py  test_research.py  test_resume104.py  test_resume_parse.py  test_resume_store.py  test_salary_insights.py  test_scheduler.py  (+32 more)
sentinel/tests/fixtures/: applications.json  interviews.json  (+6 more)
(+225 files in other folders)
