[project]
name = "career-agent-crawler"
version = "0.1.0"
description = "本機爬蟲 agent：用住宅 IP 代打 104，回填雲端。"
requires-python = ">=3.11"
dependencies = ["httpx>=0.27", "python-dotenv>=1.0", "curl_cffi>=0.7"]

[dependency-groups]
dev = ["pytest>=8", "pytest-asyncio>=0.23"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
