[project]
name = "job-tracker"
version = "0.1.0"
description = "104 Job Tracker — AI 求職助手後端（FastAPI）"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "httpx>=0.28",
    "motor>=3.6",
    "pydantic-settings>=2.7",
    "python-multipart>=0.0.18",
    "anthropic>=0.42",
    "pypdf>=5.1",
    "python-docx>=1.1",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.25",
    "httpx>=0.28",
    "mongomock-motor>=0.0.34",
]

[build-system]
requires = ["uv_build>=0.10,<0.11"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "job_tracker"
module-root = "src"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
