[project]
name = "career-sentinel"
version = "0.1.0"
description = "104 地端哨兵：地端讀取求職狀態、比對變化、LLM 每日彙整"
requires-python = ">=3.12"
dependencies = [
    # rebrowser-playwright 是 playwright 的 drop-in 替換（內部仍是 playwright 模組），
    # 打了反偵測 patch（修 Cloudflare/DataDome 偵測的 CDP Runtime.enable 洩漏）。
    "rebrowser-playwright>=1.49",
    "pydantic>=2.7",
    "python-dotenv>=1.0",
    "httpx>=0.27",
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "pypdf>=5.1",
    "anthropic>=0.40",
    "python-multipart>=0.0.9",
    "curl_cffi>=0.7",
]

[project.scripts]
career-sentinel = "career_sentinel.cli:main"

[dependency-groups]
dev = ["pytest>=8.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/career_sentinel"]
